Ignoring user state stuff

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,5 @@ Data/_rules.txt
 jcTBL.xcodeproj/xcuserdata/Jim.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
 
 jcTBL.xcodeproj/xcuserdata/Jim.xcuserdatad/xcdebugger/Breakpoints_v2.xcbkptlist
+
+jcTBL.xcodeproj/project.xcworkspace/xcuserdata/Jim.xcuserdatad/UserInterfaceState.xcuserstate
